## Process this file with automake to produce Makefile.in
TESTS=test
EXTRA_DIST=test test1 test1.txt_fst test10 test10.txt_fst test11 test11.txt_fst test12\
test12.txt_fst test13 test13.txt_fst test14 test14.txt_fst test15\
test15.txt_fst test16 test16.txt_fst test17 test17.txt_fst test18\
test18.txt_fst test19 test19.txt_fst test2 test2.txt_fst test20\
test20.txt_fst test21 test21.txt_fst test22 test22.txt_fst test23\
test23.txt_fst test24 test24.txt_fst test25 test25.txt_fst test26\
test26.txt_fst test27 test27.txt_fst test28 test28.txt_fst test29\
test29.txt_fst test3 test3.txt_fst test30 test30.txt_fst test31\
test31.txt_fst test32 test32.txt_fst test33 test33.txt_fst test34\
test34.txt_fst test35 test35.txt_fst test36 test36.txt_fst test37\
test37.txt_fst test38 test38.txt_fst test39 test39.txt_fst test4\
test4.txt_fst test40 test40.txt_fst test41 test41.txt_fst test42\
test42.txt_fst test43 test43.txt_fst test44 test44.txt_fst test45\
test45.txt_fst test46 test46.txt_fst test47 test47.txt_fst test48\
test48.txt_fst test49 test49.txt_fst test5 test5.txt_fst test51\
test51.txt_fst test52 test52.txt_fst test53 test53.txt_fst test54\
test54.txt_fst test55 test55.txt_fst test56 test56.txt_fst test57\
test57.txt_fst test58 test58.txt_fst test59 test59.txt_fst test6\
test6.txt_fst test60 test60.txt_fst test61 test61.txt_fst test62\
test62.txt_fst test7 test7.txt_fst test8 test8.txt_fst test9\
test9.txt_fst

check_DATA=test1 test1.txt_fst test10 test10.txt_fst test11 test11.txt_fst test12\
test12.txt_fst test13 test13.txt_fst test14 test14.txt_fst test15\
test15.txt_fst test16 test16.txt_fst test17 test17.txt_fst test18\
test18.txt_fst test19 test19.txt_fst test2 test2.txt_fst test20\
test20.txt_fst test21 test21.txt_fst test22 test22.txt_fst test23\
test23.txt_fst test24 test24.txt_fst test25 test25.txt_fst test26\
test26.txt_fst test27 test27.txt_fst test28 test28.txt_fst test29\
test29.txt_fst test3 test3.txt_fst test30 test30.txt_fst test31\
test31.txt_fst test32 test32.txt_fst test33 test33.txt_fst test34\
test34.txt_fst test35 test35.txt_fst test36 test36.txt_fst test37\
test37.txt_fst test38 test38.txt_fst test39 test39.txt_fst test4\
test4.txt_fst test40 test40.txt_fst test41 test41.txt_fst test42\
test42.txt_fst test43 test43.txt_fst test44 test44.txt_fst test45\
test45.txt_fst test46 test46.txt_fst test47 test47.txt_fst test48\
test48.txt_fst test49 test49.txt_fst test5 test5.txt_fst test51\
test51.txt_fst test52 test52.txt_fst test53 test53.txt_fst test54\
test54.txt_fst test55 test55.txt_fst test56 test56.txt_fst test57\
test57.txt_fst test58 test58.txt_fst test59 test59.txt_fst test6\
test6.txt_fst test60 test60.txt_fst test61 test61.txt_fst test62\
test62.txt_fst test7 test7.txt_fst test8 test8.txt_fst test9\
test9.txt_fst

