## Process this file with automake to produce Makefile.in
if WANT_XFST
TESTS=test.sh
endif

EXTRA_DIST=test.sh \
	angle_brackets.xfst angle_brackets.att \
	compose_net.xfst compose_net.att \
	concatenate_net.xfst concatenate_net.att \
	union_net.xfst union_net.att \
	ignore_net.xfst ignore_net.att \
	invert_net.xfst invert_net.att \
	minus_net.xfst minus_net.att \
	intersect_net.xfst intersect_net.att \
	negate_net_1.xfst negate_net_1.att \
	negate_net_2.xfst negate_net_2.att \
	negate_net_fail.xfst \
	one_plus_net.xfst one_plus_net.att \
	zero_plus_net.xfst zero_plus_net.att \
	determinize_net.xfst determinize_net.att \
	minimize_net.xfst minimize_net.att \
	epsilon_remove_net.xfst epsilon_remove_net.att \
	reverse_net.xfst reverse_net.att \
	upper_side_net.xfst upper_side_net.att \
	lower_side_net.xfst lower_side_net.att \
	one_transition_regex.xfst one_transition_regex.att \
	substitute_defined.xfst substitute_defined.att \
	substitute_symbol_1.xfst substitute_symbol_1.att \
	substitute_symbol_2.xfst substitute_symbol_2.att \
	substitute_symbol_3.xfst substitute_symbol_3.att \
	substitute_symbol_4.xfst substitute_symbol_4.att \
	substitute_symbol_5.xfst substitute_symbol_5.att \
	substitute_symbol_6.xfst substitute_symbol_6.att \
	substitute_symbol_7.xfst substitute_symbol_7.att \
	substitute_symbol_8.xfst substitute_symbol_8.att \
	substitute_label_1.xfst substitute_label_1.att \
	substitute_label_2.xfst substitute_label_2.att \
	substitute_label_3.xfst substitute_label_3.att \
	substitute_label_4.xfst substitute_label_4.att \
	substitute_label_5.xfst substitute_label_5.att \
	substitute_label_6.xfst substitute_label_6.att \
	substitute_label_7.xfst substitute_label_7.att \
	substitute_label_8.xfst substitute_label_8.att \
	substitute_defined_1.xfst substitute_defined_1.att \
	substitute_defined_2.xfst substitute_defined_2.att \
	substitute_defined_3.xfst substitute_defined_3.att \
	substitute_defined_4.xfst substitute_defined_4.att \
	substitute_defined_5.xfst substitute_defined_5.att \
	substitute_defined_6.xfst substitute_defined_6.att \
	merge.xfst merge.att \
	merge_weighted.xfst merge_weighted.att \
	replace_identity.xfst replace_identity.att \
	quoted_literals.xfst quoted_literals.att \
	define.xfst define.att \
	define_function.xfst define_function.att \
	eliminate_flag.xfst eliminate_flag.output \
	empty_context.xfst empty_context.output \
	set_variable.xfst set_variable.output \
	apply_up.xfst apply_up.output \
	apply_down.xfst apply_down.output \
	print_stack.xfst print_stack.output \
	print_labels.xfst print_labels.output \
	print_label_tally.xfst print_label_tally.output \
	shortest_string.xfst shortest_string.output \
	flag_with_unknown.xfst flag_with_unknown.output \
	test_sublanguage_true.xfst test_sublanguage_false.xfst \
	test_overlap_true.xfst test_overlap_false.xfst \
	test_true.output test_false.output \
	quit-on-fail.xfst print_net.xfst print_net.output \
	print_net.alternative_output \
	inspect_net.xfst inspect_net.output \
	inspect_net.alternative_output \
	prolog.xfst prolog.att assert.xfst \
	at_re_1.xfst at_re_1.att at_re_2.xfst at_re_2.att \
	at_re_3.xfst at_re_3.att a2b.re at_re_a2b.re \
	at_txt.att at_stxt.att at_txt_and_stxt.att \
	at_txt.xfst at_stxt.xfst at_txt_and_stxt.xfst \
	words.txt words.stxt \
	at_pl.xfst at_pl.att network.prolog \
	contains.xfst contains.output \
	contains_once.xfst contains_once.output \
	contains_once_optional.xfst contains_once_optional.output \
	contains_with_weight.xfst contains_with_weight.output \
	weighted_replace_right_1.xfst weighted_replace_right_1.result \
	weighted_replace_right_2.xfst weighted_replace_right_2.result \
	weighted_replace_right_3.xfst weighted_replace_right_3.result \
	weighted_replace_right_4.xfst weighted_replace_right_4.result \
	weighted_replace_right_5.xfst weighted_replace_right_5.result \
	weighted_replace_right_6.xfst weighted_replace_right_6.result \
	weighted_replace_right_7.xfst weighted_replace_right_7.result \
	weighted_replace_right_8.xfst weighted_replace_right_8.result \
	weighted_replace_right_9.xfst weighted_replace_right_9.result \
	weighted_optional_replace_right_1.xfst weighted_optional_replace_right_1.result \
	weighted_optional_replace_right_2.xfst weighted_optional_replace_right_2.result \
	weighted_optional_replace_right_3.xfst weighted_optional_replace_right_3.result \
	weighted_optional_replace_right_4.xfst weighted_optional_replace_right_4.result \
	weighted_optional_replace_right_5.xfst weighted_optional_replace_right_5.result \
	weighted_optional_replace_right_6.xfst weighted_optional_replace_right_6.result \
	weighted_optional_replace_right_7.xfst weighted_optional_replace_right_7.result \
	weighted_optional_replace_right_8.xfst weighted_optional_replace_right_8.result \
	weighted_optional_replace_right_9.xfst weighted_optional_replace_right_9.result \
	weighted_ltr_longest_match_1.xfst weighted_ltr_longest_match_1.result \
	weighted_ltr_longest_match_2.xfst weighted_ltr_longest_match_2.result \
	weighted_ltr_longest_match_3.xfst weighted_ltr_longest_match_3.result \
	weighted_ltr_shortest_match_1.xfst weighted_ltr_shortest_match_1.result \
	weighted_ltr_shortest_match_2.xfst weighted_ltr_shortest_match_2.result \
	weighted_ltr_shortest_match_3.xfst weighted_ltr_shortest_match_3.result \
	replace_test_1.xfst replace_test_1.output \
	replace_test_2.xfst replace_test_2.output \
	replace_test_3.xfst replace_test_3.output \
	replace_test_4.xfst replace_test_4.output \
	replace_test_5.xfst replace_test_5.output \
	replace_test_6.xfst replace_test_6.output \
	replace_test_7.xfst replace_test_7.output \
	replace_test_8.xfst replace_test_8.output \
	replace_test_9.xfst replace_test_9.output \
	replace_test_10.xfst replace_test_10.output \
	replace_test_11.xfst replace_test_11.output \
	replace_test_12.xfst replace_test_12.output \
	replace_test_13.xfst replace_test_13.output \
	replace_test_14.xfst replace_test_14.output \
	replace_test_15.xfst replace_test_15.output \
	replace_test_16.xfst replace_test_16.output \
	replace_test_17.xfst replace_test_17.output \
	replace_test_18.xfst replace_test_18.output \
	replace_test_19.xfst replace_test_19.output \
	replace_test_20.xfst replace_test_20.output \
	replace_test_21.xfst replace_test_21.output \
	replace_test_22.xfst replace_test_22.output \
	replace_test_23.xfst replace_test_23.output \
	replace_test_24.xfst replace_test_24.output \
	replace_test_25.xfst replace_test_25.output \
	replace_test_26.xfst replace_test_26.output \
	replace_test_27.xfst replace_test_27.output \
	replace_test_28.xfst replace_test_28.output \
	replace_test_29.xfst replace_test_29.output \
	replace_test_30.xfst replace_test_30.output \
	replace_test_31.xfst replace_test_31.output \
	replace_test_32.xfst replace_test_32.output \
	replace_test_33.xfst replace_test_33.output \
	replace_test_34.xfst replace_test_34.output \
	replace_test_35.xfst replace_test_35.output \
	replace_test_36.xfst replace_test_36.output \
	replace_test_37.xfst replace_test_37.output \
	replace_test_38.xfst replace_test_38.output \
	replace_test_39.xfst replace_test_39.output \
	replace_test_40.xfst replace_test_40.output \
	replace_test_41.xfst replace_test_41.output \
	replace_test_42.xfst replace_test_42.output \
	replace_test_43.xfst replace_test_43.output \
	replace_test_44.xfst replace_test_44.output \
	replace_test_45.xfst replace_test_45.output \
	replace_test_46.xfst replace_test_46.output \
	replace_test_47.xfst replace_test_47.output \
	replace_test_48.xfst replace_test_48.output \
	replace_test_49.xfst replace_test_49.output \
	replace_test_50.xfst replace_test_50.output \
	replace_test_51.xfst replace_test_51.output \
	replace_test_52.xfst replace_test_52.output \
	replace_test_53.xfst replace_test_53.output \
	replace_test_flags_1.xfst replace_test_flags_1.att \
	weighted_parallel_rules_1.xfst weighted_parallel_rules_1.output \
	weighted_parallel_rules_2.xfst weighted_parallel_rules_2.output \
	weighted_parallel_rules_3.xfst weighted_parallel_rules_3.output \
	weighted_parallel_rules_4.xfst weighted_parallel_rules_4.output \
	weighted_parallel_rules_5.xfst weighted_parallel_rules_5.output \
	weighted_parallel_rules_6.xfst weighted_parallel_rules_6.output \
	weighted_parallel_rules_7.xfst weighted_parallel_rules_7.output \
	weighted_parallel_rules_8.xfst weighted_parallel_rules_8.output \
	weighted_parallel_rules_9.xfst weighted_parallel_rules_9.output \
	weighted_parallel_rules_10.xfst weighted_parallel_rules_10.output \
	weighted_parallel_rules_11.xfst weighted_parallel_rules_11.output \
	xerox_composition.xfst xerox_composition.output \
	compile_replace_1.xfst compile_replace_1.output \
	compile_replace_2.xfst compile_replace_2.output \
	compile_replace_3.xfst compile_replace_3.output \
	replace_markup_1.att replace_markup_1.xfst \
	replace_markup_2.att replace_markup_2.xfst \
	replace_markup_3.att replace_markup_3.xfst \
	replace_markup_4.att replace_markup_4.xfst \
	replace_markup_5.att replace_markup_5.xfst \
	replace_markup_6.att replace_markup_6.xfst \
	replace_markup_7.att replace_markup_7.xfst \
	priority_union_1.att priority_union_1.xfst \
	priority_union_2.att priority_union_2.xfst \
	priority_union_3.att priority_union_3.xfst \
	priority_union_4.att priority_union_4.xfst
check_DATA=test.sh
